[package]
name = "libcaesium-node"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["caesium.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libcaesium = { git = "https://github.com/Lymphatus/libcaesium", tag = "0.12.0" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
